--- a/styles.scss
+++ b/styles.scss
@@ -27,3 +27,7 @@
 @import "posts";
 @import "pagination";
 @import "message";
+
+.ic-code-24px {
+    background-image: url('data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2224%22%20height%3D%2224%22%20viewBox%3D%220%200%2024%2024%22%3E%3Cpath%20d%3D%22M9.4%2016.6L4.8%2012l4.6-4.6L8%206l-6%206%206%206%201.4-1.4zm5.2%200l4.6-4.6-4.6-4.6L16%206l6%206-6%206-1.4-1.4z%22%2F%3E%3C%2Fsvg%3E')
+}
