adding structure to the main portfolio page

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -18,7 +18,8 @@ $root-font-size: 16px;
 $root-line-height: 1.5;
 
 $body-color: #515151;
-$body-bg: #292929;
+// $body-bg: #292929;
+$body-bg: #eeeeee;
 $link-color: $blue;
 
 $border-color: #e5e5e5;
