--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,12 +6,12 @@
   <body>
 
     <div class="container content">
-      <header class="masthead">
+      <!-- <header class="masthead">
         <h3 class="masthead-title">
           <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
           <small>{{ site.tagline }}</small>
         </h3>
-      </header>
+      </header> -->
 
       <main>
         {{ content }}
