--- a/styles.scss
+++ b/styles.scss
@@ -40,7 +40,7 @@
 
 
     img {
-            max-width: 200px;
+            max-width: 250px;
 
     }
 }
@@ -50,11 +50,19 @@
     margin-top: 4em;
     padding-top: 1em;
     border-top: 1px solid #ccc;
-    clear: both;
+
+
 
 
     img {
             max-width: 250px;
-            margin-top: 2em;
+            margin-top: 1em;
+            margin-right: .4em;
+            float: left;
+            box-shadow: 2px 2px 2px #aaa;
+    }
+
+    ul {
+        clear: both;
     }
 }
