--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -13,13 +13,15 @@ $blue: #268bd2;
 // $blue: #6a9fb5;
 $brown: #8f5536;
 
-$root-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif;
+$root-font-family: et-book, georgia;
+// $root-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif;
 $root-font-size: 16px;
 $root-line-height: 1.5;
 
-$body-color: #515151;
+// $body-color: #515151;
 // $body-bg: #292929;
-$body-bg: #eeeeee;
+$body-color: #111;
+$body-bg: #fffff8;
 $link-color: $blue;
 
 $border-color: #e5e5e5;
