--- a/styles.scss
+++ b/styles.scss
@@ -18,6 +18,7 @@
 // https://github.com/poole/poole.
 
 @import "variables";
+@import "et-book";
 @import "base";
 @import "type";
 @import "syntax";
@@ -33,6 +34,14 @@
 }
 
 //portfolio
+
+.page {
+
+    li {
+        list-style-type: none;
+        margin-bottom: 1em;
+    }
+}
 .case-studies {
     padding-top: 1em;
     border-top: 1px solid #ccc;
