type and layout adjustments

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -20,8 +20,9 @@ $root-line-height: 1.5;
 
 // $body-color: #515151;
 // $body-bg: #292929;
-$body-color: #111;
-$body-bg: #fffff8;
+// $body-bg: #fffff8;
+$body-color: #d3d3d3;
+$body-bg: #222;
 $link-color: $blue;
 
 $border-color: #e5e5e5;
