layout and content updates

--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -8,6 +8,7 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 1.25;
   color: $body-color;
   text-rendering: optimizeLegibility;
+  font-family: "et-book", georgia;
 }
 
 h1 {
