--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,7 +2,7 @@
 //
 // Styles for managing the structural hierarchy of the site.
 
-.container {
+article {
   max-width: 38rem;
   padding-left:  1.5rem;
   padding-right: 1.5rem;
