big clean up and simplification of in-progress portfolio page design work

--- a/_sass/_fonts.scss
+++ b/_sass/_fonts.scss
@@ -1,5 +1,8 @@
 
 //'Encode Sans Expanded', sans-serif;
-@import url('https://fonts.googleapis.com/css?family=Encode+Sans+Expanded');
+// @import url('https://fonts.googleapis.com/css?family=Encode+Sans+Expanded');
+//
+// @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
-@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
