--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -15,7 +15,7 @@ $brown: #8f5536;
 
 
 
-$root-font-family: 'Open Sans', sans-serif;
+$root-font-family: 'Montserrat', helvetica, sans-serif;
 //$root-font-family: et-book, georgia;
 // $root-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif;
 $root-font-size: 16px;
