--- a/styles.scss
+++ b/styles.scss
@@ -63,6 +63,13 @@
         color: #666;
     }
 
+    .caption {
+        color: #888;
+        font-size: .7rem;
+        margin: 0 0 2rem 0;
+        font-style: italic;
+    }
+
     a {
         color: #6670b9;
     }
