--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -1,8 +1,15 @@
 // Placeholder to allow defining custom styles that override everything else.
 // (Use `_sass/minima/custom-variables.scss` to override variable defaults)
 
-h1 {
-    line-height: 1.3;
+.home {
+    h1 {
+        font-size: 1.7rem;
+        line-height: 1.3;
+        padding-bottom: 20px;
+        @media screen and (max-width: $on-palm) {
+            font-size: 1.3rem;
+        }
+    }
 }
 
 #work-highlights {
