--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -15,7 +15,7 @@
 #work-highlights {
     margin-top: 2rem;
     padding-top: 1rem;
-    border-top: 4px solid #eeeeee;
+    border-top: 4px solid #eee;
 }
 
 .work-highlight {
@@ -40,7 +40,74 @@
         img {
             margin-top: 1em;
         }
-  }
+    }
+
+    &.small-thumbnail {
+        .work-highlight-description {
+            flex: 2;
+        }
+
+        img {
+            margin-top: 0;
+        }
+    }
   
+}
+
+.thumbnail-inset {
+    @media screen and (min-width: $on-medium) {
+        max-width: 450px;
+        float: right;
+        margin: 20px 0 20px 20px;
+    }
+
+    img {
+        border: 1px solid #ccc;
+    }
+
+    figcaption {
+        margin-top: 10px;
+    }
+}
+
+/// portfolio page template 
+.portfolio {
+
+    h2 {
+        line-height: 1.3;
+        padding: 15px 0;
+        border-top: 2px solid #ddd;
+        
+    }
+
+    h3 {
+        font-weight: bold; 
+
+        @include relative-font-size(1);
+    
+        @media screen and (min-width: $on-large) {
+          @include relative-font-size(1);
+        }
+      }
+    dt {
+        margin-top: 15px;
+        font-weight: bold;
+    }
+    dd {
+        @include relative-font-size(.9);
+    }
+}
+
+.thumbnail-full {
+    margin-bottom: 40px;
+
+    img {
+        
+    }
+
+    figcaption {
+        margin-top: 5px;
+        color: #777;
+    }
 }
 
