reducing the size of h2s on portfolio pages

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -74,6 +74,7 @@
 .portfolio {
 
     h2 {
+        font-size: 1.5rem;
         line-height: 1.3;
         padding: 15px 0;
         border-top: 2px solid #ddd;
