adding posts and updating site sturcutre

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,7 @@
-{% comment %}
+
+
+
+
 <footer class="site-footer h-card">
   <data class="u-url" href="{{ "/" | relative_url }}"></data>
 </footer>
@@ -6,6 +9,14 @@
 
 <div class="wrapper">
 
+  <div class="footer-col-wrapper">
+    <div class="footer-col">
+      <p>© 2023 Wesley Lindamood. All opinions on this site are my own and not the views of my employer.</p>
+    </div>
+  </div>
+</div>
+{% comment This is the original footer. %}
+<div class="wrapper">
   <div class="footer-col-wrapper">
     <div class="footer-col">
       <p class="feed-subscribe">
