--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -77,11 +77,11 @@
         font-size: 1.5rem;
         line-height: 1.3;
         padding: 15px 0;
-        border-top: 2px solid #ddd;
         
     }
 
     h3 {
+        margin-top: 0;
         font-weight: bold; 
 
         @include relative-font-size(1);
